--- a/assets/css/custom-style.css
+++ b/assets/css/custom-style.css
@@ -21,6 +21,11 @@ body {
     }
 }
 
+.small-screen {
+    margin-top: 4rem;
+    margin-bottom: 4rem;
+}
+
 .screen {
     min-height: 100vh;
     padding-top: 5rem;
