--- a/assets/css/custom-style.css
+++ b/assets/css/custom-style.css
@@ -61,8 +61,9 @@ span.invisible {
 }
 
 img.text-icon {
-    max-height: 1rem;
-    max-width: 1rem;
+    height: 1rem;
+    width: 1rem;
+    object-fit: contain;
 }
 
 address li {
