use UC logo + slight change to icon alignments

--- a/assets/css/custom-style.css
+++ b/assets/css/custom-style.css
@@ -61,9 +61,10 @@ span.invisible {
 }
 
 img.text-icon {
-    height: 1rem;
-    width: 1rem;
+    height: 1.2rem;
+    width: 1.2rem;
     object-fit: contain;
+    vertical-align: text-bottom;
 }
 
 address li {
